--- a/pom.xml
+++ b/pom.xml
@@ -1,56 +1,39 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"  
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"  
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0  
-         http://maven.apache.org/xsd/maven-4.0.0.xsd">  
-  
-  <modelVersion>4.0.0</modelVersion>  
-  
-  <groupId>com.devops</groupId>  
-  <artifactId>java-web-app</artifactId>  
-  <version>1.0-SNAPSHOT</version>  
-  <packaging>war</packaging>  
-  
-  <name>Java Web App</name>  
-  <url>http://your-company.com</url>  
-  
-  <properties>  
-    <maven.compiler.source>1.8</maven.compiler.source>  
-    <maven.compiler.target>1.8</maven.compiler.target>  
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
-  </properties>  
-  
-  <dependencies>  
-    <!-- Servlet API for HelloServlet.java -->  
-    <dependency>  
-      <groupId>javax.servlet</groupId>  
-      <artifactId>javax.servlet-api</artifactId>  
-      <version>4.0.1</version>  
-      <scope>provided</scope>  
-    </dependency>  
-  </dependencies>  
-  
-  <build>  
-    <finalName>java-web-app</finalName>  
-    <plugins>  
-      <plugin>  
-        <groupId>org.apache.maven.plugins</groupId>  
-        <artifactId>maven-compiler-plugin</artifactId>  
-        <version>3.8.1</version>  
-        <configuration>  
-          <source>1.8</source>  
-          <target>1.8</target>  
-        </configuration>  
-      </plugin>  
-  
-      <plugin>  
-        <groupId>org.apache.maven.plugins</groupId>  
-        <artifactId>maven-war-plugin</artifactId>  
-        <version>3.3.2</version>  
-        <configuration>  
-          <failOnMissingWebXml>false</failOnMissingWebXml>  
-        </configuration>  
-      </plugin>  
-    </plugins>  
-  </build>  
-  
+<project xmlns="http://maven.apache.org/POM/4.0.0" ...>
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>com.akilesh</groupId>
+  <artifactId>java-web-app</artifactId>
+  <version>1.0</version>
+  <packaging>war</packaging>
+
+  <dependencies>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.10.1</version>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.4.0</version>
+        <configuration>
+          <warSourceDirectory>web</warSourceDirectory>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
